--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -1,13 +1,87 @@
+.font-1-xs {
+  font: 400 0.75rem/1.35 "Poppins", sans-serif;
+}
+
+.font-2-xs {
+  font: 400 0.875rem/1.43 "Roboto", sans-serif;
+}
+
+.font-1-s {
+  font: 400 1rem/1.5 "Poppins", sans-serif;
+}
+
+.font-2-s {
+  font: 400 1rem/1.5 "Roboto", sans-serif;
+}
+
+.font-1-m,
+.font-1-m-b {
+  font: 400 1.125rem/1.35 "Poppins", sans-serif;
+}
+
+.font-1-m-b {
+  font-weight: 600;
+}
+
+.font-2-m {
+  font: 500 1.125rem/1.35 "Roboto", sans-serif;
+}
+
+.font-1-l {
+  font: 400 1.5rem/1.5 "Poppins", sans-serif;
+}
+
+.font-2-l,
+.font-2-l-b {
+  font: 400 1.5rem/1.5 "Roboto", sans-serif;
+}
+
+.font-2-l-b {
+  font-weight: 500;
+  letter-spacing: 0.015em;
+  text-transform: uppercase;
+}
+
+.font-1-xl {
+  font: 600 2rem/1.25 "Poppins", sans-serif;
+}
+
+.font-2-xl {
+  font: 500 2rem/1.25 "Roboto", sans-serif;
+}
+
 .texto-grande {
-  font-size: 64px;
+  font-size: 4rem;
   line-height: 1.125;
-  font-family: 'Poppins';
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
+  /*font: 600 4rem/1.125 "Poppins", sans-serif; Alternativa - mais curta*/
 }
 
 .texto-medio {
-  font-size: 24px;
+  font-size: 1.5rem;
   line-height: 1.5;
-  font-family: 'Roboto';
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
+  /*font: 400 1.5rem/1.5 "Roboto", sans-serif*/
+}
+
+@media (max-width: 1200px) {
+  .texto-grande {
+    font-size: 48px;
+  }
+  .font-2-l,
+  .font-2-l-b {
+    font-size: 1.125;
+  }
+}
+
+@media (max-width: 800px) {
+  .texto-grande {
+    font-size: 2rem;
+  }
+  .font-1-xl,
+  .font-2-xl {
+    font-size: 1.5rem;
+  }
 }
