--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 
+/* Header */
 @import "./global/header.css";
 
 /* Utilidades */
@@ -9,5 +10,7 @@
 
 /* HOME */
 @import "./home/introducao.css";
+@import "./home/tecnologia.css";
 
+/* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
