--- a/css/utilidades/cores.css
+++ b/css/utilidades/cores.css
@@ -19,6 +19,7 @@
   --cor-p5: #332200;
 }
 
+/* Cores Primárias */
 .cor-0 {
   color: var(--cor-0);
 }
@@ -59,6 +60,19 @@
   color: var(--cor-12);
 }
 
+/* Cores Secundárias */
 .cor-p1 {
   color: var(--cor-p1);
+}
+.cor-p2 {
+  color: var(--cor-p2);
+}
+.cor-p3 {
+  color: var(--cor-p3);
+}
+.cor-p4 {
+  color: var(--cor-p4);
+}
+.cor-p5 {
+  color: var(--cor-p5);
 }
