--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 
-/* Header */
+/* Header - footer */
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
@@ -16,3 +17,6 @@
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+
+/* Seguros */
+@import "./seguros/seguros.css";
