--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 
 /* Contato */
 @import "./contato/contato.css";
-@import "./bicicleta/lojas.css";
+@import "./contato/lojas.css";
 
 /* Termos */
 @import "./termos/termos.css";
