--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg {
-  background: var(--cor-12);
+  background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat bottom 160px left 20px;
   box-shadow: inset 0 -120px var(--cor-0); /*borda interna do main*/
 }
 
@@ -31,6 +31,12 @@
 
 .introducao p {
   margin-bottom: 20px;
+}
+
+@media (max-width: 1350px) {
+  .introducao-bg {
+    background: var(--cor-12);
+  }
 }
 
 @media (max-width: 800px) {
